--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.1",
     "hardhat-deploy": "^0.12.4",
     "hardhat-deploy-ethers": "^0.4.2",
     "prettier": "^3.3.2",
