--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules
+./node_modules
 .env
 
 # Hardhat files
@@ -12,3 +12,4 @@ node_modules
 # solidity-coverage files
 /coverage
 /coverage.json
+node_modules
