--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "ethers": "^6.13.1",
     "hardhat-deploy": "^0.12.4",
     "hardhat-deploy-ethers": "^0.4.2",
+    "hardhat-gas-reporter": "^2.2.0",
+    "hardhat-verify": "^1.0.0",
     "prettier": "^3.3.2",
     "prettier-plugin-solidity": "^1.3.1",
-    "solady": "^0.0.213"
+    "solady": "^0.0.213",
+    "solidity-coverage": "^0.8.12"
   }
 }
